@@ -69,4 +69,5 @@ int ChangelogNaraka =
 - Villains now get CoopModeOn when playing in coop games.\n\
 - Korax's Green/Brown Chaos Magics have been combined into one Chaos Serpent Magic.\n\
 - Korax now has Steel Chain magic to grab enemies at long range and yank them over to him.\n\
-- Team balancer now runs after 5 people join the game, and now only runs on the joining team.";
+- Team balancer now runs after 5 people join the game, and now only runs on the joining team.\n\
+- Vllain pickup messages no longer display globally.";
